# LLM-101

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  env.template  requirements.txt  translate_notebook.py  翻译进度报告.md
ai-travel-planner/: .gitignore  .pre-commit-config.yaml  Dockerfile.dev  Makefile  README.md  alembic.ini  check_compatibility.py  check_versions.py  pyproject.toml  test_setup.py  validate_models.py
ai-travel-planner/docker/: Dockerfile.api-gateway  docker-compose.dev.yml  init-db.sql
ai-travel-planner/frontend/: .gitkeep
ai-travel-planner/migrations/: env.py
ai-travel-planner/migrations/versions/: 001_initial_migration.py
ai-travel-planner/requirements/: base.txt  dev.txt  vllm.txt
ai-travel-planner/scripts/: init_db.py  setup-dev.sh
ai-travel-planner/services/agent-service/: __init__.py
ai-travel-planner/services/chat-service/: __init__.py
ai-travel-planner/services/rag-service/: __init__.py
ai-travel-planner/services/vllm-service/: __init__.py  client.py  config.py  models.py  prompt_manager.py  server.py  streaming.py
ai-travel-planner/services/vllm-service/tests/: __init__.py  test_client.py  test_config.py  test_prompt_manager.py  test_streaming.py
ai-travel-planner/services/workflow-service/: __init__.py
ai-travel-planner/shared/config/: __init__.py
ai-travel-planner/shared/database/: __init__.py  config.py  models.py
ai-travel-planner/shared/utils/: __init__.py
ai-travel-planner/tests/: test_database.py  test_models.py
chapter01-llm-env/: check_gpu_cuda.py  first_llm_app.py  setup_env.sh  setup_llm101_dev.sh  start_jupyter.sh
chapter01-llm-env/colab-ops/: Google Colab Tutorial.md  Ngrok Tutorial.md
chapter01-llm-env/cursor-ops/: Cursor 异常问题收集和解决方案 🔧📚.md
chapter01-llm-env/jupyter-ops/: Jupyter Lab 初学者指南.md  start_jupyter.sh
chapter01-llm-env/linux_ops/: Ubuntu22.04.4-运维配置手册.md  Ubuntu运维工具说明.md
chapter02-llm-prompt/: README-Chinese.md  README.md  prompt_engineering_demo.py  requirements.txt  run_demo.py  快速开始指南.md
chapter02-llm-prompt/Anthropic 1P/: 00_Tutorial_How-To.ipynb  01_Basic_Prompt_Structure.ipynb  02_Being_Clear_and_Direct.ipynb  03_Assigning_Roles_Role_Prompting.ipynb  04_Separating_Data_and_Instructions.ipynb  05_Formatting_Output_and_Speaking_for_Claude.ipynb  06_Precognition_Thinking_Step_by_Step.ipynb  07_Using_Examples_Few-Shot_Prompting.ipynb  08_Avoiding_Hallucinations.ipynb  09_Complex_Prompts_from_Scratch.ipynb  10.3_Appendix_Search & Retrieval.ipynb  README_CN.md
chapter02-llm-prompt/advanced_prompting/: chain_of_thought.py  self_reflection.py
chapter02-llm-prompt/content_generation/: document_generator.py
chapter02-llm-prompt/examples/: comprehensive_demo.py
chapter02-llm-prompt/function_calling/: basic_function_calling.py
chapter02-llm-prompt/openai_prompt_jupyter/: 00_Tutorial_How-To.ipynb  10_Tool Use.ipynb  (+23 more)
chapter03-llm-deploy/: Transformers.md
chapter05-llm-rag/: README.MD
chapter06-llm-agent/: README.MD
chapter07-llm-n8n/: README.MD  README.md  README_Feishu_TTS.md  README_Telegram_TTS.md  USAGE.md  config_template.py  docker-compose.yml  env.example  feishu_config_template.py  feishu_translator.ipynb  feishu_turkish_tts_workflow.ipynb  n8n-manager.sh  n8n初学者指南.md  n8n服务管理脚本使用说明.md  n8n：工作流自动化的未来.md  requirements.txt  start.sh  telegram_turkish_tts_workflow.ipynb  操作指南.md
chapter08-llm-n8n/: README.MD
chapter08-llm_finetuning/: Readme.md
chapter09-llm-project/: README.MD
docs/: 《零基础实战大模型》课程大纲.md  《零基础实战大模型》课程大纲_优化版.md  《零基础实战大模型》课程大纲_旅游规划版.md
linux_ops/: set_bashrc_env.sh
scripts/: system-check.sh
(+59 files in other folders)
